--- a/frontend/online.html
+++ b/frontend/online.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio - Pong</title>
+    <title>Juego Online - Pong</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
       <div class="contenido">
-        <h1>Pong</h1>
+        <h1>Juego Online</h1>
         <div class="buttons">
-          <a href="/practicar.html"><button>Practicar</button></a>
-          <a href="/local.html"><button>Juego Local</button></a>
-          <a href="/online.html"><button>Juego Online</button></a>
+          <a href=""><button>Crear lobby</button></a>
+          <a href=""><button>Unirse a lobby</button></a>
         </div>
       </div>
     </div>
+    <a href="/index.html" class="casita" title="Volver al menú"> 🏠 </a>
   </body>
 </html>
